bonk 8 million refactors a lot of java-25-ification, not too much practically