@@ -2,7 +2,6 @@ package fish.cichlidmc.cichlid.impl.report;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 public final class ReportSection {
@@ -11,7 +10,7 @@ public final class ReportSection {
 	public final List<ReportDetail> details;
 
 	public ReportSection(String header) {
-		this(header, Collections.emptyList());
+		this(header, List.of());
 	}
 
 	public ReportSection(String header, ReportDetail... details) {
